BREAKING CHANGE: replaced "task" by "activity"
